<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.github.idelstak</groupId>
  <artifactId>ikonx</artifactId>
  <version>1.10.0</version>
  <packaging>jar</packaging>
  <name>IkonX</name>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <artifact.name>ikonx</artifact.name>
    <exec.mainClass>com.github.idelstak.ikonx.Main</exec.mainClass>
    <packageClassName>com.github.idelstak.ikonx.Main</packageClassName>
    <maven.compiler.release>25</maven.compiler.release>
    <javafx.version>25</javafx.version>
    <ikonli.version>12.4.0</ikonli.version>
  </properties>
  <dependencies>
    <!--JavaFX-->
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-graphics</artifactId>
      <version>${javafx.version}</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>${javafx.version}</version>
    </dependency>
    <!-- Icons -->
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-javafx</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-fontawesome-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-fontawesome5-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-evaicons-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-ionicons4-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-lineawesome-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-weathericons-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-devicons-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-material2-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-dashicons-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-elusive-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-themify-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-octicons-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-websymbols-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-carbonicons-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-prestashopicons-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-unicons-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-linecons-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-captainicon-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-jamicons-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-zondicons-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-feather-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-openiconic-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-codicons-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-ociicons-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-remixicon-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-ionicons-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-antdesignicons-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-subway-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-simplelineicons-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-fileicons-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-maki-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-maki2-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-whhg-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-simpleicons-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-foundation-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-microns-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-ligaturesymbols-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-bpmn-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-typicons-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-hawcons-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-mapicons-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-metrizeicons-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-coreui-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-runestroicons-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-paymentfont-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-fluentui-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-win10-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-fontelico-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-boxicons-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-entypo-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-icomoon-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-medicons-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-bootstrapicons-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-bytedance-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-fontawesome6-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-material-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-materialdesign-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-materialdesign2-pack</artifactId>
      <version>${ikonli.version}</version>
    </dependency>
    <!-- AtlantaFX-->
    <dependency>
      <groupId>io.github.mkpaz</groupId>
      <artifactId>atlantafx-base</artifactId>
      <version>2.1.0</version>
    </dependency>
    <!-- GemsFX -->
    <dependency>
      <groupId>com.dlsc.gemsfx</groupId>
      <artifactId>gemsfx</artifactId>
      <version>2.96.0</version>
    </dependency>
    <!-- RxJava-->
    <dependency>
      <groupId>io.reactivex.rxjava3</groupId>
      <artifactId>rxjava</artifactId>
      <version>3.1.11</version>
      <type>jar</type>
    </dependency>
    <dependency>
      <groupId>org.pdfsam.rxjava3</groupId>
      <artifactId>rxjavafx</artifactId>
      <version>3.0.3</version>
      <type>jar</type>
    </dependency>
    <!-- Testing-->
    <dependency>
      <groupId>org.testfx</groupId>
      <artifactId>testfx-core</artifactId>
      <version>4.0.18</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testfx</groupId>
      <artifactId>testfx-junit5</artifactId>
      <version>4.0.18</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>6.0.0-RC3</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <includes>
          <include>version.properties</include>
        </includes>
        <filtering>true</filtering>
      </resource>
      <resource>
        <directory>src/main/resources</directory>
        <excludes>
          <exclude>version.properties</exclude>
        </excludes>
        <filtering>false</filtering>
      </resource>
    </resources>
    <plugins>
      <!-- Adds license headers -->
      <plugin>
        <groupId>com.mycila</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <version>5.0.0</version>
        <configuration>
          <header>${basedir}/LICENSE</header>
          <includes>
            <include>src/main/java/**</include>
            <include>src/test/java/**</include>
          </includes>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>format</goal>
            </goals>
            <phase>process-sources</phase>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.4.2</version>
        <configuration>
          <outputDirectory>${project.build.directory}/libs</outputDirectory>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
              <classpathPrefix>../libs/</classpathPrefix>
              <mainClass>${exec.mainClass}</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>3.9.0</version>
        <executions>
          <execution>
            <id>copy-dependencies</id>
            <phase>package</phase>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <configuration>
              <includeScope>runtime</includeScope>
              <outputDirectory>${project.build.directory}/libs</outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.7.1</version>
        <executions>
          <execution>
            <id>zip-dist</id>
            <phase>verify</phase>
            <goals>
              <goal>single</goal>
            </goals>
            <configuration>
              <finalName>${artifact.name}-${project.version}</finalName>
              <appendAssemblyId>false</appendAssemblyId>
              <descriptors>
                <descriptor>src/assembly/dist.xml</descriptor>
              </descriptors>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.panteleyev</groupId>
        <artifactId>jpackage-maven-plugin</artifactId>
        <version>1.7.1</version>
        <executions>
          <execution>
            <id>package-app</id>
            <phase>package</phase>
            <goals>
              <goal>jpackage</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <name>${artifact.name}-${project.version}</name>
          <appVersion>${project.version}</appVersion>
          <vendor>Idelstak</vendor>
          <input>${project.build.directory}/libs</input>
          <destination>${project.build.directory}/dist</destination>
          <mainJar>${project.build.directory}/libs/${project.build.finalName}.jar</mainJar>
          <mainClass>${exec.mainClass}</mainClass>
          <removeDestination>false</removeDestination>
          <javaOptions>
            <option>--enable-preview</option>
            <option>--enable-native-access=ALL-UNNAMED</option>
            <option>-Dfile.encoding=UTF-8</option>
          </javaOptions>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>win</id>
      <activation>
        <os>
          <family>windows</family>
        </os>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.panteleyev</groupId>
            <artifactId>jpackage-maven-plugin</artifactId>
            <configuration>
              <icon>${project.basedir}/icons/logo.ico</icon>
              <winMenu>true</winMenu>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>mac</id>
      <activation>
        <os>
          <family>mac</family>
        </os>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.panteleyev</groupId>
            <artifactId>jpackage-maven-plugin</artifactId>
            <configuration>
              <icon>${project.basedir}/icons/logo.icns</icon>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>linux</id>
      <activation>
        <os>
          <family>linux</family>
        </os>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.panteleyev</groupId>
            <artifactId>jpackage-maven-plugin</artifactId>
            <configuration>
              <type>APP_IMAGE</type>
              <icon>${project.basedir}/icons/logo128.png</icon>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
